--- a/slang.css
+++ b/slang.css
@@ -1,9 +1,66 @@
 .area{
 	width: 100%;
-	height: 45%;
+	height: 30vh;
 	overflow: auto;
+	resize: none;
 }
+
 #slangInput{
 	width: 100%;
 	resize: none;
+}
+
+.container{
+	flex-direction: column;
+	padding: 32px 64px;
+}
+
+h2,h3{
+	color: #d32b2b;
+}
+
+.flex{
+	display: flex;
+}
+
+.header{
+	padding: 2rem;
+	background-image: linear-gradient(120deg, #991515, #601599);
+	text-align: center;
+	color: white;
+}
+
+.headertext{
+	margin: 0;
+}
+
+.subline{
+	opacity: 0.7;
+	font-weight: normal;
+	color: white;
+}
+
+button,select{
+	padding: 5px;
+	flex: 1;
+}
+
+.btn{
+	color: white;
+	text-decoration: none;
+	border: 1px solid white;
+	display: inline-block;
+	padding: 0.6rem;
+	transition: 0.2s all;
+}
+
+.btn:hover{
+	background-color: rgba(255,255,255,0.2);
+}
+
+body,html{
+	background-color: white;
+	margin: 0;
+	padding: 0;
+	font-family: Arial;
 }
